[package]
name = "larnt"
version = "0.1.0"
edition = "2021"
authors = ["HellOwhatAs"]
description = "3D Line Art Engine - Rust rewrite of fogleman/ln."
license = "MIT"
readme = "README.md"
repository = "https://github.com/HellOwhatAs/larnt"

[dependencies]
image = { version = "0.25", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
image = "0.25"
