[package]
name = "larnt"
version = "0.1.0"
edition = "2024"
authors = ["HellOwhatAs"]
description = "3D Line Art Engine - Rust rewrite of fogleman/ln."
license = "MIT"
readme = "README.md"
repository = "https://github.com/HellOwhatAs/larnt"

[dependencies]
bon = "3.9.0"
image = { version = "0.25", default-features = false, optional = true }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

[features]
default = ["png"]
png = ["image/png"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["gif"] }
